tests/transpiler/x/zig/min_max_builtin.error
/workspace/mochi/tests/transpiler/x/zig/min_max_builtin.zig:5:11: error: unused local constant
