tests/transpiler/x/zig/min_max_builtin.zig
// Generated by Mochi Zig transpiler v0.10.31 on 2025-07-20 02:32 +0000
const std = @import("std");

pub fn main() void {
    const nums: [3]i64 = [3]i64{3, 1, 4};
    std.debug.print("{any}\n", .{1});
    std.debug.print("{any}\n", .{4});
}
